--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 requests~=2.28.1
 progress~=1.6
+google-auth-oauthlib~=0.5.2
+google-auth-httplib2~=0.1.0
+google-api-core~=2.8.2
+google-api-python-client~=2.56.0
